--- a/ch02_colab.ipynb
+++ b/ch02_colab.ipynb
@@ -53,16 +53,16 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "Xq0LZLNrIM8s",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Xq0LZLNrIM8s",
         "outputId": "c1f3dac9-b8fb-4d71-b389-48d0ea26e0bb"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'data'...\n",
             "remote: Enumerating objects: 21, done.\u001b[K\n",
@@ -116,16 +116,16 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "byeiH13hIM8u",
-        "outputId": "753a22c4-dd7d-4ace-ae5e-36b04dd7f802",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "byeiH13hIM8u",
+        "outputId": "753a22c4-dd7d-4ace-ae5e-36b04dd7f802"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
             "30/30 [==============================] - 3s 3ms/step - loss: 2.5237 - accuracy: 0.8511\n",
@@ -147,8 +147,14 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "provenance": []
+    },
+    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3.10.8 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -162,14 +168,13 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.8"
     },
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    "vscode": {
+      "interpreter": {
+        "hash": "fb4569285eef3a3450cb62085a5b1e0da4bce0af555edc33dcf29baf3acc1368"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
